.scss files updated

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,9 @@
-* {
-  background-color: hotpink;
+h1 {
+  font-family: "Helvetica";
+}
+
+button {
+  background-color: #FF3A33;
 }
 
 /*# sourceMappingURL=main.css.map */
