updated styles before lunch

--- a/src/styles/scss/buttons.scss
+++ b/src/styles/scss/buttons.scss
@@ -6,10 +6,15 @@ button{
 	width: 150px;
 	height: 50px;
 	color: white;
+	position: relative;	
+	top: 100px;
 
 	&:hover {
 		background-color: #1CFF49;
 	}
 
-}
+	&:active {
+		background-color: black;
+	}
 
+}
