--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -1,8 +1,15 @@
 h1{
 	font-family: "Helvetica";
 	color: white;	
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
 }
 
-
-
-
+h3{
+	font-family: "Helvetica";
+	color: black;	
+	display: flex;
+  	justify-content: center;
+  	align-items: center;
+}
