--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,93 +1,32 @@
 @media (max-width: 414px) {
-  html {
-    height: 100%;
-  }
-
-  body {
+  .startscreen__background {
     background-image: url("images/375x812.jpg");
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    height: 100%;
-    background-color: unset !important;
-    padding: 10em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  button {
-    position: relative;
-    top: 100px;
   }
 }
 @media (max-width: 1024px) {
-  html {
-    height: 100%;
-  }
-
-  body {
+  .startscreen__background {
     background-image: url("images/375x812.jpg");
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    height: 100%;
-    background-color: unset !important;
-    padding: 10em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  button {
-    position: relative;
-    top: 100px;
   }
 }
 @media (min-width: 1025px) {
-  html {
-    height: 100%;
-  }
-
-  body {
+  .startscreen__background {
     background-image: url("images/background_home.jpg");
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    height: 100%;
-    background-color: unset !important;
-    padding: 10em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  button {
-    position: relative;
-    top: 100px;
   }
 }
 h1 {
   font-family: "Helvetica";
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h3 {
+  font-family: "Helvetica";
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
@@ -98,9 +37,42 @@ button {
   width: 150px;
   height: 50px;
   color: white;
+  position: relative;
+  top: 100px;
 }
 button:hover {
   background-color: #1CFF49;
+}
+button:active {
+  background-color: black;
+}
+
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-color: unset !important;
+  padding: 10em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.startscreen__background {
+  height: 151vh;
+  width: 46vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=main.css.map */
