--- a/src/styles/scss/general_styling.scss
+++ b/src/styles/scss/general_styling.scss
@@ -1,10 +1,29 @@
-// html{
-// 	background-image: url("images/375x812.jpg");
-// 	background-color: unset !important;
-// }
+html{
+	height: 100%;
+}
+	
+body{
+	height: 100%;
+	background-size: cover;
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-color: unset !important;
+	padding: 10em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
+.startscreen__background{
+	height: 151vh;
+	width: 46vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	}
 
-
-
+a{
+	text-decoration: none;
+}
 
 
