--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,19 +2,37 @@
   .startscreen__background {
     background-image: url("images/375x812.jpg");
   }
+
+  body {
+    padding: 50px;
+  }
 }
 @media (max-width: 1024px) {
   .startscreen__background {
     background-image: url("images/375x812.jpg");
   }
+
+  body {
+    padding: 50px;
+  }
 }
 @media (min-width: 1025px) {
   .startscreen__background {
     background-image: url("images/background_home.jpg");
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  body {
+    padding: 50px;
   }
 }
 h1 {
   font-family: "Helvetica";
+  font-weight: lighter;
   color: white;
   display: flex;
   justify-content: center;
@@ -23,7 +41,18 @@ h1 {
 
 h3 {
   font-family: "Helvetica";
+  font-weight: lighter;
+  font-weight: 10px;
   color: black;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.timemusclescreen__title {
+  color: #FF3A33;
+  font-family: "Helvetica";
+  font-weight: 200;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,12 +76,17 @@ button:active {
   background-color: #1CFF49;
 }
 
+.goalscreen__next {
+  display: flex;
+  justify-content: right;
+  align-items: right;
+}
+
 html {
   height: 100%;
 }
 
 body {
-  height: 100%;
   background-size: cover;
   background-position: top center;
   background-repeat: no-repeat;
@@ -63,7 +97,7 @@ body {
 }
 
 .startscreen__background {
-  height: 112vh;
+  height: 100vh;
   width: 46vh;
   display: flex;
   justify-content: center;
@@ -72,6 +106,13 @@ body {
 
 a {
   text-decoration: none;
+}
+
+.timemusclescreen_mins {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  font-size: 33px;
 }
 
 /*# sourceMappingURL=main.css.map */
