--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -1,5 +1,6 @@
 h1{
 	font-family: "Helvetica";
+	font-weight: lighter;
 	color: white;	
 	display: flex;
   	justify-content: center;
@@ -8,8 +9,21 @@ h1{
 
 h3{
 	font-family: "Helvetica";
+	font-weight: lighter;
+	font-weight: 10px;
 	color: black;	
+	display: flex;
+  	justify-content: left;
+  	align-items: center;
+}
+
+.timemusclescreen__title{
+	color: #FF3A33;
+	font-family: "Helvetica";
+	font-weight: 200;
 	display: flex;
   	justify-content: center;
   	align-items: center;
+	
 }
+
