--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -2,18 +2,32 @@
 	.startscreen__background{
 		background-image: url("images/375x812.jpg");
 	}
+	body{
+		padding: 50px;
+	}	
+	
 }
 
 @media (max-width: 1024px){ //ipad / pro
 	.startscreen__background{
 		background-image: url("images/375x812.jpg");
 	}
+		body{
+		padding: 50px;
+	}
 }
 
 @media (min-width: 1025px){ //iphone 6/7/8/xs/
 	.startscreen__background{
 		background-image: url("images/background_home.jpg");
+		height: 100%;
+		width: 100%  ;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
-
+		body{
+		padding: 50px;
+	}
 }
 
