--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -27,3 +27,16 @@ h3{
 	
 }
 
+label{
+	font-family: "Helvetica";
+	font-weight: 200;
+	color: #A2A2A2;
+	display: flex;
+	justify-content: space-between;
+}
+
+
+.timemusclescreen__radio{
+	display: flex;
+	justify-content: space-between;
+}
