--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -2,9 +2,12 @@
 	.startscreen__background{
 		background-image: url("images/375x812.jpg");
 	}
-	body{
-		padding: 50px;
-	}	
+	
+	.timemusclescreen_divide{
+		background-color: #A2A2A2;
+		height: 2px;
+		margin: 0px;
+	}
 	
 }
 
@@ -12,12 +15,9 @@
 	.startscreen__background{
 		background-image: url("images/375x812.jpg");
 	}
-		body{
-		padding: 50px;
-	}
 }
 
-@media (min-width: 1025px){ //iphone 6/7/8/xs/
+@media (min-width: 1025px){//everthing else
 	.startscreen__background{
 		background-image: url("images/background_home.jpg");
 		height: 100%;
@@ -26,8 +26,10 @@
 		justify-content: center;
 		align-items: center;
 	}
-		body{
-		padding: 50px;
-	}
+
+	input#time.timemusclescreen_mins{
+			width: 70px;
+
+		}
 }
 
