--- a/src/styles/scss/general_styling.scss
+++ b/src/styles/scss/general_styling.scss
@@ -1,5 +1,3 @@
-
-	
 body{
 	background-size: cover;
 	background-position: top center;
@@ -8,29 +6,28 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
 }
 
 .startscreen__background{
-	height: 100vh;
-	width: 46vh;
+
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-image: url("images/background_home.jpg");
+
 	}
 
 a{
 	text-decoration: none;
 }
 
-
-.timemusclescreen_mins{
-	
-	height: 40px;
+	.timemusclescreen_mins{
+	width: 327px;	
 	position: relative;
 	font-size: 33px;
 
 }
+
 
 .timemusclescreen_divide{
 	background-color: #A2A2A2;
@@ -39,10 +36,21 @@ a{
 }
 
 div.timemusclescreen__radio{
-	display: inline-flex;
 }
 
-div.timemusclescreen__checkbox{
+input{
+	float: right;
 	display: flex;
-	flex-direction: columns; //thisn
+
 }
+
+#root{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+
+	.timemusclescreen__form{
+		display: flex;
+		flex-direction: column;
+	}
