--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -1,6 +1,34 @@
+@media (max-width: 376px){ //iphone 6/7/8/xs/
+	.timemusclescreen__form{
+		display: flex;
+		flex-direction: column;
+	}
+
+
+}
+
 @media (max-width: 414px){ //iphone 6/7/8/xs/
 	.startscreen__background{
-		background-image: url("images/375x812.jpg");
+		height: 100vh;
+		width: 46vh;
+	}
+	
+	.timemusclescreen_divide{
+		background-color: #A2A2A2;
+		height: 2px;
+		margin: 0px;
+	}
+	
+	div.timemusclescreen__checkbox{
+
+	}
+}
+
+
+@media (max-width: 768px){ //iphone 6/7/8/xs/
+	.startscreen__background{
+		height: 100vh;
+		width: 46vh;
 	}
 	
 	.timemusclescreen_divide{
@@ -11,25 +39,13 @@
 	
 }
 
-@media (max-width: 1024px){ //ipad / pro
-	.startscreen__background{
-		background-image: url("images/375x812.jpg");
-	}
-}
 
 @media (min-width: 1025px){//everthing else
 	.startscreen__background{
-		background-image: url("images/background_home.jpg");
-		height: 100%;
-		width: 100%  ;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		height: 99vh;
+		width: 97vh;
 	}
-
-	input#time.timemusclescreen_mins{
-			width: 70px;
-
-		}
 }
-
