--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,3 @@
-@media (max-width: 376px) {
-  .timemusclescreen__form {
-    display: flex;
-    flex-direction: column;
-  }
-}
 @media (max-width: 414px) {
   .startscreen__background {
     height: 100vh;
@@ -14,6 +8,11 @@
     background-color: #A2A2A2;
     height: 2px;
     margin: 0px;
+  }
+
+  .workoutSheetScreen_wrapper {
+    display: flex;
+    flex-direction: row;
   }
 }
 @media (max-width: 768px) {
@@ -99,6 +98,10 @@ button:active {
   display: flex;
   justify-content: right;
   align-items: right;
+}
+
+.workoutSheetScreen_wrapper {
+  display: grid;
 }
 
 body {
