--- a/src/styles/scss/grid.scss
+++ b/src/styles/scss/grid.scss
@@ -1,19 +1,4 @@
-// #root{
-// 	display: grid;
-// 	grid-row: 1fr 1fr 1fr;
-// 	grid-column: 1fr 1fr 1fr;
-// 	grid-template-areas:
-// 	". top ."
-// 	". middle ."
-// 	". bottom ."
-        
-      
-//     ;
-// 	background-image: url("images/375x812.jpg"); //background image cover
-// 	height: 100vh;
-	
-// }
+.workoutSheetScreen_wrapper{
+	display: grid;
 
-// a {
-// 	grid-area: middle;
-// }
+}
