--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -1,12 +1,3 @@
-@media (max-width: 376px){ //iphone 6/7/8/xs/
-	.timemusclescreen__form{
-		display: flex;
-		flex-direction: column;
-	}
-
-
-}
-
 @media (max-width: 414px){ //iphone 6/7/8/xs/
 	.startscreen__background{
 		height: 100vh;
@@ -21,6 +12,11 @@
 	
 	div.timemusclescreen__checkbox{
 
+	}
+
+	.workoutSheetScreen_wrapper{
+		display: flex;
+		flex-direction: row;
 	}
 }
 
