--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,11 +9,6 @@
     height: 2px;
     margin: 0px;
   }
-
-  .workoutSheetScreen_wrapper {
-    display: flex;
-    flex-direction: row;
-  }
 }
 @media (max-width: 768px) {
   .startscreen__background {
@@ -69,6 +64,7 @@ label {
   font-weight: 300;
   display: flex;
   justify-content: space-between;
+  padding-top: 23px;
 }
 
 .timemusclescreen__radio {
@@ -85,7 +81,7 @@ button {
   height: 50px;
   color: white;
   position: relative;
-  top: 100px;
+  top: 7em;
 }
 button:hover {
   background-color: #1CFF49;
@@ -112,6 +108,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 20px;
+  font-family: "Helvetica";
 }
 
 .startscreen__background {
@@ -126,9 +124,10 @@ a {
 }
 
 .timemusclescreen_mins {
-  width: 327px;
+  width: 84px;
   position: relative;
   font-size: 33px;
+  right: -130px;
 }
 
 .timemusclescreen_divide {
@@ -140,6 +139,9 @@ a {
 input {
   float: right;
   display: flex;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
 }
 
 #root {
@@ -151,6 +153,14 @@ input {
 .timemusclescreen__form {
   display: flex;
   flex-direction: column;
+}
+
+h1.workoutsheetscreen_h1 {
+  color: black;
+}
+
+.table__red {
+  color: red;
 }
 
 /*# sourceMappingURL=main.css.map */
