--- a/src/styles/scss/general_styling.scss
+++ b/src/styles/scss/general_styling.scss
@@ -6,7 +6,10 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-size: 20px;
+	font-family: "Helvetica";
 }
+
 
 .startscreen__background{
 
@@ -22,9 +25,10 @@ a{
 }
 
 	.timemusclescreen_mins{
-	width: 327px;	
+	width: 84px;	
 	position: relative;
 	font-size: 33px;
+	right: -130px;
 
 }
 
@@ -41,8 +45,9 @@ div.timemusclescreen__radio{
 input{
 	float: right;
 	display: flex;
-
-
+	width: 40px;
+	height: 40px;
+	font-size: 22px;
 }
 
 #root{
@@ -54,4 +59,12 @@ input{
 .timemusclescreen__form{
 	display: flex;
 	flex-direction: column;
+}
+
+h1.workoutsheetscreen_h1{
+	color: black;
+}
+
+.table__red{
+	color: red;
 }
