completed ipad 786 width res

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,17 +12,18 @@
 }
 @media (max-width: 768px) {
   .startscreen__background {
-    height: 100vh;
-    width: 46vh;
+    height: 130vh;
+    width: 50vh;
   }
 }
-@media (min-width: 1025px) {
+@media (min-width: 769px) {
   .startscreen__background {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 99vh;
-    width: 97vh;
+    background-repeat: no-repeat;
+    height: 81vh;
+    width: 78vh;
   }
 }
 h1 {
@@ -30,6 +31,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 300;
 }
 
 h1.workoutsheetscreen_h1 {
