--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -11,22 +11,20 @@
 	}
 }
 
-
 @media (max-width: 768px){ //iphone 6/7/8/xs/
 	.startscreen__background{
-		height: 100vh;
-		width: 46vh;
+		height: 130vh;
+		width: 50vh;
 	}
-	
 }
 
-
-@media (min-width: 1025px){//everthing else
+@media (min-width: 769px){//everthing else
 	.startscreen__background{
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		height: 99vh;
-		width: 97vh;
+		background-repeat: no-repeat;
+		height: 81vh;
+		width: 78vh;
 	}
 }
