iPhone 5 layout satisfied

--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -35,7 +35,8 @@ label{
 	font-weight: 300;
 	display: flex;
 	justify-content: space-between;
-	padding-top: 23px
+	padding-top: 14px;
+    padding-bottom: 14px;
 }
 
 .timemusclescreen__radio{
