--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,13 +1,17 @@
+@media (max-width: 496px) {
+  input {
+    height: 10px;
+    width: 10px;
+  }
+
+  #root {
+    width: -webkit-fill-available;
+  }
+}
 @media (max-width: 414px) {
   .startscreen__background {
     height: 100vh;
     width: 46vh;
-  }
-
-  .timemusclescreen_divide {
-    background-color: #A2A2A2;
-    height: 2px;
-    margin: 0px;
   }
 }
 @media (max-width: 768px) {
@@ -60,7 +64,8 @@ label {
   font-weight: 300;
   display: flex;
   justify-content: space-between;
-  padding-top: 23px;
+  padding-top: 14px;
+  padding-bottom: 14px;
 }
 
 .timemusclescreen__radio {
@@ -104,7 +109,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 1rem;
   font-family: "Helvetica";
   font-weight: lighter;
 }
@@ -120,7 +125,7 @@ body {
   width: 87px;
   position: relative;
   font-size: 33px;
-  right: -130px;
+  right: -90px;
 }
 
 .timemusclescreen_divide {
