--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -1,14 +1,22 @@
+@media (max-width: 496px){ //iphone 5
+	
+	input{
+		height: 10px;
+		width: 10px;
+	}
+	#root{
+	width: -webkit-fill-available;
+}
+
+}	
+	
+
 @media (max-width: 414px){ //iphone 6/7/8/xs/
 	.startscreen__background{
 		height: 100vh;
 		width: 46vh;
 	}
 	
-	.timemusclescreen_divide{
-		background-color: #A2A2A2;
-		height: 2px;
-		margin: 0px;
-	}
 }
 
 @media (max-width: 768px){ //iphone 6/7/8/xs/
