workout time styled

--- a/src/styles/scss/fonts.scss
+++ b/src/styles/scss/fonts.scss
@@ -39,6 +39,12 @@ label{
     padding-bottom: 14px;
 }
 
+.timemusclescreen__workoutLabel{
+	text-align: center;
+    position: relative;
+    left: 90px;
+}
+
 .timemusclescreen__radio{
 	display: flex;
 	justify-content: space-between;
