--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,6 +68,12 @@ label {
   padding-bottom: 14px;
 }
 
+.timemusclescreen__workoutLabel {
+  text-align: center;
+  position: relative;
+  left: 90px;
+}
+
 .timemusclescreen__radio {
   display: flex;
   justify-content: space-between;
@@ -155,6 +161,10 @@ input {
 
 .table__red {
   color: red;
+}
+
+td {
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=main.css.map */
