--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,33 +1,13 @@
-@media (max-width: 496px) {
-  input {
-    height: 10px;
-    width: 10px;
-  }
-
-  #root {
-    width: -webkit-fill-available;
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+/* Portrait and Landscape */
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+  form {
+    width: 268px;
   }
 }
-@media (max-width: 414px) {
-  .startscreen__background {
-    height: 100vh;
-    width: 46vh;
-  }
-}
-@media (max-width: 768px) {
-  .startscreen__background {
-    height: 130vh;
-    width: 50vh;
-  }
-}
-@media (min-width: 769px) {
-  .startscreen__background {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-repeat: no-repeat;
-    height: 81vh;
-    width: 78vh;
+@media only screen and (min-device-width: 1024px) {
+  form {
+    font-size: 2rem;
   }
 }
 h1 {
@@ -92,7 +72,6 @@ button {
   height: 50px;
   color: white;
   position: relative;
-  top: 7em;
 }
 button:hover {
   background-color: #1CFF49;
@@ -108,10 +87,6 @@ button:active {
 }
 
 body {
-  background-size: cover;
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-color: unset !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,6 +100,12 @@ body {
   justify-content: center;
   align-items: center;
   background-image: url("images/background_home.jpg");
+  background-size: cover;
+  width: 97vw;
+  height: 98vh;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-color: unset !important;
 }
 
 .timemusclescreen_mins {
