--- a/src/styles/scss/general_styling.scss
+++ b/src/styles/scss/general_styling.scss
@@ -1,8 +1,6 @@
 body{
-	background-size: cover;
-	background-position: top center;
-	background-repeat: no-repeat;
-	background-color: unset !important;
+	
+	
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -18,7 +16,12 @@ body{
 	justify-content: center;
 	align-items: center;
 	background-image: url("images/background_home.jpg");
-
+	background-size: cover;
+	width: 97vw;
+    height: 98vh;
+    background-position: top center;
+	background-repeat: no-repeat;
+	background-color: unset !important;
 	}
 
 .timemusclescreen_mins{
