--- a/src/styles/scss/media_queries.scss
+++ b/src/styles/scss/media_queries.scss
@@ -1,38 +1,21 @@
-@media (max-width: 496px){ //iphone 5
-	
-	input{
-		height: 10px;
-		width: 10px;
-	}
-	#root{
-	width: -webkit-fill-available;
+/* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    form{
+    	width: 268px;
+    }
+
 }
 
-}	
-	
+@media only screen  
+and (min-device-width : 1024px) {   	
 
-@media (max-width: 414px){ //iphone 6/7/8/xs/
-	.startscreen__background{
-		height: 100vh;
-		width: 46vh;
-	}
-	
+    form{
+    	font-size: 2rem;
+    }
 }
 
-@media (max-width: 768px){ //iphone 6/7/8/xs/
-	.startscreen__background{
-		height: 130vh;
-		width: 50vh;
-	}
-}
-
-@media (min-width: 769px){//everthing else
-	.startscreen__background{
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		background-repeat: no-repeat;
-		height: 81vh;
-		width: 78vh;
-	}
-}
